# dual_display

./: .gitignore  README.md
android-receiver/: settings.gradle
android-receiver/app/: build.gradle
android-receiver/app/src/main/: AndroidManifest.xml
android-receiver/app/src/main/java/com/heysnap/extdisplay/: MainActivity.kt
android-receiver/app/src/main/res/values/: styles.xml
docs/: build.md  mac.md  protocol.md
mac-host/: Package.swift
mac-host/Sources/MacHost/: main.swift
windows-sender/: CMakeLists.txt
windows-sender/src/: main.cpp
